WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143157
Safari clears selection when its window gets activated via mouse down
https://bugs.webkit.org/show_bug.cgi?id=143157
Summary
Safari clears selection when its window gets activated via mouse down
Ryosuke Niwa
Reported
2015-03-27 15:36:03 PDT
Reproduction steps: 1. In a Safari window, select some text in a webpage 2. Switch to another window (so that Safari window will be inactive). 3. Click anywhere in the Safari window to activate it back. Expected result: Selection stays in tact (not being cleared). Actual result: Selection gets cleared. <
rdar://problem/16797013
>
Attachments
Fixes the bug
(5.97 KB, patch)
2015-03-27 15:40 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixed non-Mac builds
(6.00 KB, patch)
2015-03-27 15:41 PDT
,
Ryosuke Niwa
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2015-03-27 15:40:33 PDT
Created
attachment 249613
[details]
Fixes the bug
Ryosuke Niwa
Comment 2
2015-03-27 15:41:38 PDT
Created
attachment 249615
[details]
Fixed non-Mac builds
Ryosuke Niwa
Comment 3
2015-03-27 15:55:51 PDT
Per Andres' in-person comment, I'm replacing USE(APP_KIT) by PLATFORM(MAC).
Ryosuke Niwa
Comment 4
2015-03-27 15:56:58 PDT
Committed
r182087
: <
http://trac.webkit.org/changeset/182087
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug